--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <!-- Hero Section -->
         <section class="hero">
-            <img src="img/.png" alt="">
+            <img src="anand.png" alt="">
             <div class="text-section">
                 <h4>Hi there,</h4>
                 <h1>I'm Anand Sharma</h1>
@@ -51,17 +51,17 @@
           <section class="projects">
            
            <div class="Portfolio">
-            <img src="img/portfolio.png" alt="portfolio image" width="250px" height="200px">
+            <img src="portfolio.png" alt="portfolio image" width="250px" height="200px">
             <p>Personal Portfolio</p>
             </div>
             <div class="zomato">
                 <a href="zomato_clone.html" target="_blank">
-            <img src="img/zomato.png" alt="zomato image" width="250px" height="200px"></a>
+            <img src="zomato.png" alt="zomato image" width="250px" height="200px"></a>
             <p>Zomato Clone</p>
             </div>
             <div class="green plant">
             <a href="go_green.html" target="_blank">
-                <img src="img/green planet.jpg" alt="" width="250px" height="200px"></a>
+                <img src="Green Planet.jpg" alt="" width="250px" height="200px"></a>
             <p>Go Green Website</p>
             </div>
             
@@ -98,5 +98,6 @@
         &copy; 2025 Anand Sharma. All rights reserved.
     </footer>
 </body>
+
 
 </html>
